Added template files and some improvements

--- a/raspberry-lazy-mc.yml
+++ b/raspberry-lazy-mc.yml
@@ -13,6 +13,6 @@
     - base
     - { role: shares, when: shared_storage }
     - transmission
-    - sickrage
-    - couchpotato
-    - kodi
+    # - sickrage
+    # - couchpotato
+    # - kodi
