--- a/roles/transmission/tasks/main.yml
+++ b/roles/transmission/tasks/main.yml
@@ -8,17 +8,8 @@
   service: name=transmission-daemon state=stopped
   sudo: true
 
-- name: Stop transmission daemon
-  service: name=transmission-daemon state=stopped
-  sudo: true
-
 - name: Load settings.json template
   template: src=transmission-settings.json.j2 dest=/etc/transmission-daemon/settings.json
   sudo: true
-
-- name: Modify daemon default user
-  
-
-- name: Stop transmission daemon
-  service: name=transmission-daemon state=restarted
-  sudo: true
+  notify:
+    - restart transmission
