--- a/roles/shares/tasks/main.yml
+++ b/roles/shares/tasks/main.yml
@@ -1,3 +1,3 @@
   - name: Create CIFS credential file
-    template: src=credentials.j2 dest={{ shares_cifs_credential_file }} owner=rool group=root mode=0400
+    template: src=credentials.j2 dest={{ shares_cifs_credential_file }} owner=root group=root mode=0400
     sudo: yes
